<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.wangbin</groupId>
  <artifactId>data-collection-service</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>data-collection-service</name>
  <description>工业数据采集服务</description>

  <licenses>
    <license>
      <name>MIT License</name>
      <url>https://opensource.org/license/mit</url>
      <distribution>repo</distribution>
      <comments>仅适用于本项目自有代码，第三方依赖遵循其原作者许可证。</comments>
    </license>
  </licenses>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.5.16</version>
    <relativePath/>
  </parent>

  <properties>
    <java.version>17</java.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <spring-boot.version>3.5.16</spring-boot.version>
    <!-- Boot 3.5.16 manages Tomcat 10.1.55; override to newer compatible 10.1.x security patch. -->
    <tomcat.version>10.1.59</tomcat.version>
    <!-- Boot 3.5.16 manages Netty 4.1.135.Final; override to newer compatible 4.1.x security patch. -->
    <netty.version>4.1.138.Final</netty.version>
    <mybatis.version>3.0.3</mybatis.version>
    <fastjson2.version>2.0.43</fastjson2.version>
    <guava.version>32.1.3-jre</guava.version>
    <tdengine.jdbc.version>3.7.1</tdengine.jdbc.version>
    <plc4x.version>0.13.0</plc4x.version>
    <springdoc.version>2.8.17</springdoc.version>
    <digitalpetri.modbus.version>2.1.3</digitalpetri.modbus.version>
    <jserialcomm.version>2.11.2</jserialcomm.version>
    <j60870.version>1.7.2</j60870.version>
    <iec61850bean.version>1.9.0</iec61850bean.version>
    <californium.version>3.11.0</californium.version>
    <milo.version>1.0.8</milo.version>
    <snmp4j.version>3.9.6</snmp4j.version>
    <paho.version>1.2.5</paho.version>
    <archunit.version>1.3.0</archunit.version>
  </properties>

  <modules>
    <module>collector-common</module>
    <module>collector-protocol-spi</module>
    <module>collector-runtime</module>
    <module>collector-telemetry</module>
    <module>collector-protocol-iot</module>
    <module>collector-protocol-bacnet</module>
    <module>collector-protocol-plc</module>
    <module>collector-protocol-modbus</module>
    <module>collector-protocol-opc</module>
    <module>collector-protocol-iec</module>
    <module>collector-cloud</module>
    <module>collector-storage</module>
    <module>collector-monitor</module>
    <module>collector-application</module>
    <module>collector-web</module>
    <module>collector-boot</module>
  </modules>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.springdoc</groupId>
        <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
        <version>${springdoc.version}</version>
      </dependency>
      <dependency>
        <groupId>org.mybatis.spring.boot</groupId>
        <artifactId>mybatis-spring-boot-starter</artifactId>
        <version>${mybatis.version}</version>
      </dependency>
      <dependency>
        <groupId>org.mybatis.spring.boot</groupId>
        <artifactId>mybatis-spring-boot-starter-test</artifactId>
        <version>${mybatis.version}</version>
      </dependency>
      <dependency>
        <groupId>io.netty</groupId>
        <artifactId>netty-all</artifactId>
        <version>${netty.version}</version>
      </dependency>
      <dependency>
        <groupId>com.github.ben-manes.caffeine</groupId>
        <artifactId>caffeine</artifactId>
        <version>${caffeine.version}</version>
      </dependency>
      <dependency>
        <groupId>redis.clients</groupId>
        <artifactId>jedis</artifactId>
        <version>${jedis.version}</version>
      </dependency>
      <dependency>
        <groupId>com.taosdata.jdbc</groupId>
        <artifactId>taos-jdbcdriver</artifactId>
        <version>${tdengine.jdbc.version}</version>
      </dependency>
      <dependency>
        <groupId>org.projectlombok</groupId>
        <artifactId>lombok</artifactId>
        <version>${lombok.version}</version>
      </dependency>
      <dependency>
        <groupId>com.google.guava</groupId>
        <artifactId>guava</artifactId>
        <version>${guava.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-lang3</artifactId>
        <version>${commons-lang3.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-pool2</artifactId>
        <version>${commons-pool2.version}</version>
      </dependency>
      <dependency>
        <groupId>com.alibaba.fastjson2</groupId>
        <artifactId>fastjson2</artifactId>
        <version>${fastjson2.version}</version>
      </dependency>
      <dependency>
        <groupId>com.digitalpetri.modbus</groupId>
        <artifactId>modbus-tcp</artifactId>
        <version>${digitalpetri.modbus.version}</version>
      </dependency>
      <dependency>
        <groupId>com.digitalpetri.modbus</groupId>
        <artifactId>modbus-serial</artifactId>
        <version>${digitalpetri.modbus.version}</version>
      </dependency>
      <dependency>
        <groupId>com.fazecast</groupId>
        <artifactId>jSerialComm</artifactId>
        <version>${jserialcomm.version}</version>
      </dependency>
      <dependency>
        <groupId>org.openmuc</groupId>
        <artifactId>j60870</artifactId>
        <version>${j60870.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.plc4x</groupId>
        <artifactId>plc4j-driver-modbus</artifactId>
        <version>${plc4x.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.plc4x</groupId>
        <artifactId>plc4j-driver-s7</artifactId>
        <version>${plc4x.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.plc4x</groupId>
        <artifactId>plc4j-driver-eip</artifactId>
        <version>${plc4x.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.plc4x</groupId>
        <artifactId>plc4j-driver-ads</artifactId>
        <version>${plc4x.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.plc4x</groupId>
        <artifactId>plc4j-driver-knxnetip</artifactId>
        <version>${plc4x.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.plc4x</groupId>
        <artifactId>plc4j-driver-opcua</artifactId>
        <version>${plc4x.version}</version>
      </dependency>
      <dependency>
        <groupId>com.beanit</groupId>
        <artifactId>iec61850bean</artifactId>
        <version>${iec61850bean.version}</version>
      </dependency>
      <dependency>
        <groupId>org.eclipse.californium</groupId>
        <artifactId>californium-core</artifactId>
        <version>${californium.version}</version>
      </dependency>
      <dependency>
        <groupId>org.eclipse.milo</groupId>
        <artifactId>milo-sdk-core</artifactId>
        <version>${milo.version}</version>
      </dependency>
      <dependency>
        <groupId>org.eclipse.milo</groupId>
        <artifactId>milo-sdk-client</artifactId>
        <version>${milo.version}</version>
      </dependency>
      <dependency>
        <groupId>org.eclipse.milo</groupId>
        <artifactId>milo-sdk-server</artifactId>
        <version>${milo.version}</version>
      </dependency>
      <dependency>
        <groupId>org.snmp4j</groupId>
        <artifactId>snmp4j</artifactId>
        <version>${snmp4j.version}</version>
      </dependency>
      <dependency>
        <groupId>org.eclipse.paho</groupId>
        <artifactId>org.eclipse.paho.mqttv5.client</artifactId>
        <version>${paho.version}</version>
      </dependency>
      <dependency>
        <groupId>org.eclipse.paho</groupId>
        <artifactId>org.eclipse.paho.client.mqttv3</artifactId>
        <version>${paho.version}</version>
      </dependency>
      <dependency>
        <groupId>com.tngtech.archunit</groupId>
        <artifactId>archunit-junit5</artifactId>
        <version>${archunit.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>${java.version}</source>
          <target>${java.version}</target>
          <encoding>UTF-8</encoding>
          <annotationProcessorPaths>
            <path>
              <groupId>org.projectlombok</groupId>
              <artifactId>lombok</artifactId>
              <version>${lombok.version}</version>
            </path>
          </annotationProcessorPaths>
          <compilerArgs>
            <arg>-parameters</arg>
          </compilerArgs>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <argLine>-Dfile.encoding=UTF-8 -Dstdout.encoding=UTF-8 -Dstderr.encoding=UTF-8</argLine>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>dev</id>
      <properties>
        <spring.profiles.active>dev</spring.profiles.active>
      </properties>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
    </profile>
    <profile>
      <id>test</id>
      <properties>
        <spring.profiles.active>test</spring.profiles.active>
      </properties>
    </profile>
    <profile>
      <id>prod</id>
      <properties>
        <spring.profiles.active>prod</spring.profiles.active>
      </properties>
    </profile>
    <profile>
      <id>p0-regression</id>
      <properties>
        <spring.profiles.active>test</spring.profiles.active>
      </properties>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <configuration>
              <includes>
                <include>**/CollectionSchedulerTest.java</include>
                <include>**/AdaptiveCollectionUtilTest.java</include>
                <include>**/AlarmStateTrackerTest.java</include>
                <include>**/RedisAlarmStateRepositoryTest.java</include>
                <include>**/TelemetryStreamServiceImplTest.java</include>
                <include>**/CollectorDataPostProcessorTest.java</include>
                <include>**/CacheReportServiceTest.java</include>
                <include>**/CloudOutboxServiceTest.java</include>
                <include>**/ShadowManagerTest.java</include>
                <include>**/HistoryWriteBufferTest.java</include>
              </includes>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>
